# trabalho-cg

./: mainwindow.cpp
trabalho-cg/: CMakeLists.txt  drawingcanvas.cpp  drawingcanvas.h  drawingcanvas.ui  mainwindow.h
